%% This file is part of diagramme for building a database schema diagram
%% It uses Mermaid syntax to define the entities and their relationships
erDiagram
    USER {
        string id PK
        string email
        string password
        string first_name
        string last_name
        string created_at
        string updated_at
    }
    PLACE {
        string id PK
        string title
        string description
        float price
        float latitude
        float longitude
        string user_id FK
        string created_at
        string updated_at
    }
    REVIEW {
        string id PK
        string text
        int rating
        string user_id FK
        string place_id FK
        string created_at
        string updated_at
    }
    AMENITY {
        string id PK
        string name
        string created_at
        string updated_at
    }

%% Relationships
    USER ||--o{ PLACE : owns
    USER ||--o{ REVIEW : writes
    PLACE ||--o{ REVIEW : has
    PLACE ||--o{ AMENITY : includes
    AMENITY ||--o{ PLACE : available_in